# influensa

./: README.md  package-lock.json  package.json
Ai-model/: api.py  requirements.txt  run_servers.sh
Ai-model/data/: combined_preprocessed_influencer_data.csv  dataset - Sheet1.csv  influencer_scores.csv
Ai-model/notebooks/: influencer_recommender_model.ipynb
Ai-model/src/: data_processor.py  recommender_utils.py
backend/: Cargo.toml  example.env  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  main.rs  server.ts
backend/src/config/: config.ts
backend/src/controller/: ai.controller.ts  auth.controller.ts  businessDitails.controller.ts  influencer.controller.ts  socialMedia.controller.ts  user.controller.ts
backend/src/db/: mongoDb.ts  mongo_db.rs
backend/src/errors/: ApiError.ts
backend/src/handlers/: auth.rs  mod.rs
backend/src/middlwares /: authenticateToken.ts  errorHandler.ts
backend/src/models/: BusinessDitails.ts  Influencer.ts  SocialMedia.ts  User.ts  influencer.rs  mod.rs  social_media.rs  user.rs
backend/src/router/: ai.routers.ts  auth.routers.ts  businessDetails.ts  index.ts  influencer.routers.ts  socialMedia.routers.ts  user.routes.ts
backend/src/routers/: auth.rs  mod.rs
backend/src/utils/: emailService.ts  tokenGenerator.ts  tokenUtils.ts
frontend/: app.config.js  app.json  app.tsx  babel.config.js  firebase.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: _layout.tsx  index.tsx  reset-password.tsx
frontend/components/: AppName.tsx  AppleFooterNav.tsx  FooterNav.tsx  (+6 more)
(+51 files in other folders)
