[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = "9.3.1"
bcrypt = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mongodb = "2.4"
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros"] }
